# MasterarbeitCode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  irregular_pointer_doubling.cpp  kamping_example.cpp  main.cpp  regular_pointer_doubling.cpp  regular_ruling_set.cpp  regular_ruling_set2.cpp  regular_ruling_set_rec.cpp  results.txt  run_all.sh  sequential_list_ranking.cpp  timer.cpp
code/cpp/: analyze_instances.cpp  communicator.cpp  example.cpp  forest_local_contraction.cpp  forest_local_contraction2.cpp  generator.cpp  grid_all_to_all.cpp  helper_functions.cpp  interfaces.cpp  local_contraction.cpp  main.cpp  mpi_init.cpp  test.cpp  timer.cpp
code/cpp/grid_list_ranking/: grid_irregular_pointer_doubling.cpp  grid_irregular_ruling_set2.cpp  grid_regular_ruling_set2.cpp
code/cpp/indirect_alltoall/: grid_all_to_all_impl.hpp  grid_alltoall.hpp
code/cpp/list_ranking/: example.cpp  irregular_pointer_doubling.cpp  irregular_ruling_set2.cpp  irregular_ruling_set2_rec.cpp  regular_pointer_doubling.cpp  regular_ruling_set.cpp  regular_ruling_set2.cpp  regular_ruling_set_rec.cpp
code/cpp/tree_rooting/: euler_tour.cpp  forest_euler_tour.cpp  forest_irregular_pointer_doubling.cpp  forest_irregular_ruling_set2.cpp  forest_load_balance_regular_ruling_set2.cpp  forest_regular_ruling_set2.cpp  real_load_balance.cpp  shuffle_load_balance.cpp  tree_euler_tour.cpp  tree_irregular_pointer_doubling.cpp  tree_regular_ruling_set2.cpp  wood_irregular_pointer_doubling.cpp  (+1 more)
code/python/: evaluate.py  to_json.py
tree_rooting/: tree_regular_ruling_set2.cpp
(+4 files in other folders)
